bug -- multiple policies leads to additional trailing comma

--- a/templates/iam_role.j2
+++ b/templates/iam_role.j2
@@ -10,7 +10,7 @@
           {% for p in iam_role_policies %}
 	  {
             "PolicyName": "{{ p.name }}",
-            "PolicyDocument": {{ p.policy|to_json }}{% if not loop.last %},{% endif %}
+            "PolicyDocument": {{ p.policy|to_json }}
           }{% if not loop.last %},{% endif %}
           {% endfor %}
         ],
